<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dWhite"
    tools:context=".MuralInformationActivity" >

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:contentDescription="@string/btn_lbl_menuButton"
        android:src="@drawable/dapple_menu_icon" />

    <ImageView
        android:id="@+id/img_dapple_logo"
        android:layout_width="256dp"
        android:layout_height="52dp"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/btn_menu"
        android:contentDescription="@string/btn_lbl_dapple_logo"
        android:src="@drawable/dapple_menu_logo" />

    <HorizontalScrollView
        android:id="@+id/hsv_tourSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_menu" >

        <LinearLayout
            android:id="@+id/ll_hsv_images"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onTourImageSwipe"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_tour_otr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:contentDescription="@string/txt_otrTour"
                android:src="@drawable/tour_photo_otr" />

            <ImageView
                android:id="@+id/img_tour_downtown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_downtownTour"
                android:src="@drawable/tour_photo_downtown" />
        </LinearLayout>
    </HorizontalScrollView>

   

    <Button
        android:id="@+id/startTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="34dp"
        android:background="@color/dRed"
        android:onClick="onStartTourClicked"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/startTour"
        android:textColor="@color/dWhite"
        android:textColorHint="@color/dBlue"
        android:textColorLink="@color/dBlue" />

    <TextView
        android:id="@+id/muralTitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/hsv_tourSelector"
        android:ems="10"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/lbl_muralTitleHeader"
        android:textColor="@color/dGrey"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/muralNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/muralTitleHeader"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/lbl_muralNumberValue"
        android:textColor="@color/dGrey" />

    <TextView
        android:id="@+id/muralInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tourType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/muralNumberValue"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/lbl_muralInformation"
        android:textColor="@color/dGrey" />

    <RadioGroup
        android:id="@+id/tourType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startTour"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tourTypeBike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tourTypeBike" />

        <RadioButton
            android:id="@+id/tourTypeDrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourTypeDrive2" />

        <RadioButton
            android:id="@+id/tourTypeWalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tourTypeWalk" />
    </RadioGroup>

    <TextView
        android:id="@+id/mileValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/muralInformation"
        android:layout_alignLeft="@+id/tourType"
        android:ems="10"
        android:gravity="center"
        android:text="@string/lbl_mileValue"
        android:textColor="@color/dGrey" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/muralInformation"
        android:layout_toRightOf="@+id/mileValue"
        android:ems="10"
        android:text="@string/lbl_timeValue"
        android:textColor="@color/dGrey" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/muralInformation"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:text="Getting Current Coordinates" />

</RelativeLayout>