<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MuralInformationActivity" >

    <ImageView
        android:id="@+id/muralImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/muralTitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/muralImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:text="@string/blankString" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mileValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timeValue"
        android:layout_alignBottom="@+id/timeValue"
        android:layout_toRightOf="@+id/muralImageView"
        android:ems="10" />

    <TextView
        android:id="@+id/pipeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mileValue"
        android:layout_alignLeft="@+id/muralImageView"
        android:text="@string/pipeView" />

    <Button
        android:id="@+id/startTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/startTour" />

    <EditText
        android:id="@+id/muralInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeValue"
        android:layout_alignRight="@+id/mileValue"
        android:layout_below="@+id/timeValue"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/timeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pipeView"
        android:layout_below="@+id/muralTitleHeader"
        android:layout_marginTop="44dp"
        android:ems="10" />

</RelativeLayout>
